Start of the Additem.html

--- a/Little_ Andre_Project1/additem.html
+++ b/Little_ Andre_Project1/additem.html
@@ -14,8 +14,8 @@ Project 1: Mega Weight Lost Project - Add Item page
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="" /> 
-		<meta name="keywords" content="" />
+		<meta name="description" content="Weight lost tracker app. It tracks your calorie intake and gives you a workout regimen based on it." /> 
+		<meta name="keywords" content="Weight lost tracker, losing weight, getting fit, calorie tracker," />
 		<meta name="robots" content="index, follow" />
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
 		<meta name="viewport" content="target-densitydpi=device-dpi" />
