Changed the "Title". Also, added a comment for the "Header of the App"

--- a/Little_ Andre_Project1/index.html
+++ b/Little_ Andre_Project1/index.html
@@ -21,10 +21,11 @@ Project 1: Mega Weight Lost Project - Launch Page
 		<meta name="viewport" content="target-densitydpi=device-dpi" />
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="MobileOptimized" content="320" />
-		<title>Project 1</title>
+		<title>Mega Weight Lost Project</title>
 	</head>
 	<body>
 		<header>
+			<!-- This is where my custom made logo will go for the app. -->
 			<h1>Mega Weight Lost Project</h1>
 		</header>
 		<article>
