Added the "Form" Section of the App.

--- a/Little_ Andre_Project1/additem.html
+++ b/Little_ Andre_Project1/additem.html
@@ -21,9 +21,25 @@ Project 1: Mega Weight Lost Project - Add Item page
 		<meta name="viewport" content="target-densitydpi=device-dpi" />
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="MobileOptimized" content="320" />
-		<title>Project 1</title>
+		<title>Mega Weight Lost Project</title>
 	</head>
 	<body>
+		<header>
+			<h1>Mega Weight Lost Project</h1>
+		</header>
+		<form action="#" method="post">
+			<fieldset>
+				<legend>Add a Meal</legend>
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</fieldset>
+		</form>
 		
 	</body>
 </html>
