--- a/Little_ Andre_Project1/additem.html
+++ b/Little_ Andre_Project1/additem.html
@@ -31,8 +31,31 @@ Project 1: Mega Weight Lost Project - Add Item page
 			<fieldset>
 				<legend>Add a Meal</legend>
 				<ul>
-					<li></li>
-					<li></li>
+					<li>
+						<label for="mealTime">Choose meal time:</label>
+							<select id="mealTime">
+								<option value="No meal time Selected" selected disabled>--Make a Choice--</option>
+								<option>Breakfast</option>
+								<option>Lunch</option>
+								<option>Dinner</option>
+							</select>
+					</li>
+					<li>
+						<label for="itemNumber">Number of food items?</label>
+							<select id="itemNumber">
+								<option selected>0</option>
+								<option>1</option>
+								<option>2</option>
+								<option>3</option>
+								<option>4</option>
+								<option>5</option>
+								<option>6</option>
+								<option>7</option>
+								<option>8</option>
+								<option>9</option>
+								<option>10</option>
+							</select>
+					</li>
 					<li></li>
 					<li></li>
 					<li></li>
