--- a/Little_ Andre_Project1/index.html
+++ b/Little_ Andre_Project1/index.html
@@ -29,8 +29,9 @@ Project 1: Mega Weight Lost Project - Launch Page
 			<h1>Mega Weight Lost Project</h1>
 		</header>
 		<article>
+			<h2>Description</h2>
 			<p>This app is community driven. Come find people with the same goal as you, to get FIT.</p>
-			<p>The Project is a personal trainer in your pocket. We determine your work out schedule based on your end goal, and the amount 			   		   of calories you take in a day. Want help? Need motivation? Join Today!
+			<p>The Project is a personal trainer in your pocket. We determine your work out schedule based on your end goal, and the amount of calories you take in a day. Want help? Need motivation? Join Today!
 			</p>
 		</article>
 		<a href="additem.html">Add a Meal</a>
