--- a/Little_ Andre_Project1/additem.html
+++ b/Little_ Andre_Project1/additem.html
@@ -36,25 +36,25 @@ Project 1: Mega Weight Lost Project - Add Item page
 					<li> <!-- This is the time of the day you choose to log the meal for -->
 						<label for="mealTime">Meal time:</label>
 							<select id="mealTime">
-								<option value="No meal time Selected" selected disabled>--Make a Choice--</option>
+								<option value="No meal time Selected" selected disabled>--Make a Choice--</option> 
 								<option>Breakfast</option>
 								<option>Lunch</option>
 								<option>Dinner</option>
 							</select>
 					</li>
 					<li><label for="name1">Name: </label><input type="text" id="name1" /></li>
-					<li><label for="fat">Total Fat: </label><br><input type="text" id="fat" placeholder="How many grams?" /><label for="fat">g</label></li>
-					<li><label for="carbs">Carbohydrates: </label><input type="text" id="carbs" placeholder="How many grams?" /><label for="fat">g</label></li>
-					<li><label for="pro">Protein: </label><br><input type="text" id="pro" placeholder="How many grams?" /><label for="fat">g</label></li>
+					<li><label for="fat">Total Fat: </label><br><input type="text" id="fat" placeholder="How many grams?" /><span>g</span>
+					<li><label for="carbs">Carbohydrates: </label><br><input type="text" id="carbs" placeholder="How many grams?" /><span>g</span>
+					<li><label for="pro">Protein: </label><br><input type="text" id="pro" placeholder="How many grams?" /><span>g</span>
 					<li><label for="servings">Serving Size: </label><br><input type="range" id="servings" /></li>
-					<li><label>Add Item:</label><br>
-						<input type="radio" name="add" value="Yes" />Yes<br>
-						<input type="radio" name="add" value="No" />No
-					</li><br>
+					<li><span>Add Item:</span><br>
+						<input type="radio" id="yes" name="add" value="Yes" /><label> Yes</label><br>
+						<input type="radio" id="no" name="add" value="No" /><label> No</label>
+					</li>
 					<li><label for="addInfo">Notes about Meal: </label><br><textarea id="addInfo"></textarea></li>
+					<li><input type="hidden" value="true" /></li>
 				</ul>
 			</fieldset><br>
-			<input type="hidden" value="true" />
 			<input type="submit" value="Continue" />
 		</form><br>
 		<nav>
