Added the following: "displayData" id attribute, "clearData" id attribute, and changed the input type for my "Save Meal" button.

--- a/Little_Andre_Project2/additem.html
+++ b/Little_Andre_Project2/additem.html
@@ -55,11 +55,12 @@ Project 1: Mega Weight Lost Project - Add Item page
 					<li><input type="hidden" value="true" /></li>
 				</ul>
 			</fieldset><br>
-			<input type="submit" value="Continue" />
+			<input type="button" id="saveData" value="Save Meal" />
 		</form><br>
 		<nav>
-			<a href="#">Display Stored Data</a>
-			<a href="#">Clear Stored Data</a>
+			<a href="#" id="displayData">Display Stored Data</a>
+			<a href="#" id="clearData">Clear Stored Data</a>
 		</nav>
+		<script src="js/main.js" type="text/javascript"></script>
 	</body>
 </html>
