--- a/Little_Andre_Project2/additem.html
+++ b/Little_Andre_Project2/additem.html
@@ -28,12 +28,12 @@ Project 1: Mega Weight Lost Project - Add Item page
 			<h1>Mega Weight Lost Project</h1>
 		</header>
 		
-		<form action="#" method="post"> <!-- Start of my form section -->
+		<form action="#" method="post" id="docForm"> <!-- Start of my form section -->
 			<fieldset>
 				<legend>Add a Meal</legend>
 				<ul>
 					<li><label for="date">Date: </label><input type="date" id="date" /></li>
-					<li> <!-- This is the time of the day you choose to log the meal for -->
+					<li>
 						<label for="mealTime">Meal time:</label>
 							<select id="mealTime">
 								<option value="No meal time Selected" selected disabled>--Make a Choice--</option> 
@@ -55,11 +55,12 @@ Project 1: Mega Weight Lost Project - Add Item page
 					<li><input type="hidden" value="true" /></li>
 				</ul>
 			</fieldset><br>
-			<input type="button" id="saveData" value="Save Meal" />
+			<input type="button" id="submitInfo" value="Save Meal" />
 		</form><br>
 		<nav>
-			<a href="#" id="displayData">Display Stored Data</a>
-			<a href="#" id="clearData">Clear Stored Data</a>
+			<a href="#" id="displayInfo">Display Stored Data</a>
+			<a href="#" id="clearInfo">Clear Stored Data</a>
+			<a href="additem.html" id="addNewMeal" style="display:none">Add a Meal</a>
 		</nav>
 		<script src="js/main.js" type="text/javascript"></script>
 	</body>
