Added the "for" Attributes to my "yes" and "no" label tags.

--- a/Little_Andre_Project2/additem.html
+++ b/Little_Andre_Project2/additem.html
@@ -48,8 +48,8 @@ Project 1: Mega Weight Lost Project - Add Item page
 					<li><label for="pro">Protein: </label><br><input type="text" id="pro" placeholder="How many grams?" /><span>g</span>
 					<li><label for="servings">Serving Size: </label><br><input type="range" id="servings" /></li>
 					<li><span>Add Item:</span><br>
-						<input type="radio" id="yes" name="add" value="Yes" /><label> Yes</label><br>
-						<input type="radio" id="no" name="add" value="No" /><label> No</label>
+						<input type="radio" id="yes" name="add" value="Yes" /><label for="yes"> Yes</label><br>
+						<input type="radio" id="no" name="add" value="No" /><label for="no"> No</label>
 					</li>
 					<li><label for="addInfo">Notes about Meal: </label><br><textarea id="addInfo"></textarea></li>
 					<li><input type="hidden" value="true" /></li>
