Made the following changes: Added a "class" attribute with the value "logo1" to my h1 tag. Added a "class" attribute with the value "dText" to my h2 tag Got rid of one of the p tags.

--- a/Little_Andre_Project2/index.html
+++ b/Little_Andre_Project2/index.html
@@ -26,12 +26,11 @@ Project 1: Mega Weight Lost Project - Launch Page
 	<body>
 		<header>
 			<!-- This is where my custom made logo will go for the app. -->
-			<h1>Mega Weight Lost Project</h1>
+			<h1 class="logo1">Mega Weight Lost Project</h1>
 		</header>
 		<article>
 			<h2>Description</h2>
-			<p>This app is community driven. Come find people with the same goal as you, to get FIT.</p>
-			<p>The Project is a personal trainer in your pocket. We determine your work out schedule based on your end goal, and the amount of calories you take in a day. Want help? Need motivation? Join Today!
+			<p class="dText">The Project is a personal trainer in your pocket. We determine your work out schedule based on your end goal, and the amount of calories you take in a day. Want help? Need motivation? Join Today!
 			</p>
 		</article>
 		<a href="additem.html">Add a Meal</a>
