--- a/Little_Andre_Project2/additem.html
+++ b/Little_Andre_Project2/additem.html
@@ -22,6 +22,7 @@ Project 1: Mega Weight Lost Project - Add Item page
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="MobileOptimized" content="320" />
 		<title>Mega Weight Lost Project</title>
+		<link rel="style" href="css/style.css" type="text/css" />
 	</head>
 	<body>
 		<header> <!-- Custom Logo for the header. -->
