--- a/Little_Andre_Project2/index.html
+++ b/Little_Andre_Project2/index.html
@@ -22,6 +22,7 @@ Project 1: Mega Weight Lost Project - Launch Page
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="MobileOptimized" content="320" />
 		<title>Mega Weight Lost Project</title>
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
 	<body>
 		<header>
