--- a/Little_Andre_Project2/additem.html
+++ b/Little_Andre_Project2/additem.html
@@ -22,7 +22,7 @@ Project 1: Mega Weight Lost Project - Add Item page
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="MobileOptimized" content="320" />
 		<title>Mega Weight Lost Project</title>
-		<link rel="style" href="css/style.css" type="text/css" />
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
 	<body>
 		<header> <!-- Custom Logo for the header. -->
@@ -62,7 +62,7 @@ Project 1: Mega Weight Lost Project - Add Item page
 			<ul id="naviLinks">
 				<li><a href="#" id="displayInfo">Display Data</a></li>
 				<li><a href="#" id="clearInfo">Clear Data</a></li>
-				<li><a href="additem.html" id="addNewMeal" style="display:none">Add a Meal</a></li>
+				<li><a href="additem.html" id="addNewMeal" style="display:none">Add a Meal</a></li><br>
 			</ul>
 		</nav>
 		<script src="js/main.js" type="text/javascript"></script>
